css/style.css
html,
body,
.row,
.col-main {
	height: 100%;
	background: #edebe6;
}

.container {
	height: 100%;
}

.search-box {
	height: 100%;
	min-height: 20px;
	width: 100%;
	font-size: 1em;
	border-width: 3px;
	padding: 1%;
}

.col-search {
	height: 10%;
	padding: 2%;
}

.col-map {
	height: 53%;
	overflow: hidden;
}

.map {
	height: 100%;
}

.col-wiki {
	font-size: 16px;
	text-align: justify;
	height: 28%; /*fallback for browsers with no support for calc()*/
	height: calc(37% - 57px);
	overflow-y: scroll;
}

.panel.panel-default {
	width: 100%;
}

.panel-group {
	margin: 0;
}

.panel-default {
		border: 1px solid #403b33;
}

.panel-default .panel-heading {
	padding: 0;
	height: 55px;
	border: 1px solid #403b33;
	background: #d6e1C7;
}

.place-name {
	font-size: 14px;
}

.btn-div {
	float: left;
	max-width: 20%;
}

.place-name-div {
	float: left;
	max-width: 60%;
}

.badge-div {
	max-width: 30%;
	float: right;

}

.panel-default .panel-heading .badge,
.badge {
	background-color: #403b33;
	color: #94c7b6;
	margin: 0;
	padding: 5px;
}

.panel-default .panel-heading .current-badge {
	margin: 3px 0 0 0;
	background-color: #403b33;
	color: #94c7b6;
}

.uber-price-title {
	margin: 0;
	font-size: 14px;
}

.list-group-item {
	background-color: #d6e1C7;
	border: 2px solid #403b33;
	height: 40px;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.list-group-link {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
}

.selected {
	background: #94c7b6;
}

a.list-group-item:hover {
	background: #94c7b6;
}

.btn-default {
	background: #94c7b6;
	margin: 10px;
}

.btn-default.active,
.btn-default.focus,
.btn-default:active,
.btn-default:focus,
.btn-default:hover,
.open .dropdown-toggle.btn-default {
	background: #d6e1C7;
}

.blink_me {
    -webkit-animation-name: blinker;
    -webkit-animation-duration: 1s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: infinite;

    -moz-animation-name: blinker;
    -moz-animation-duration: 1s;
    -moz-animation-timing-function: linear;
    -moz-animation-iteration-count: infinite;

    animation-name: blinker;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@-moz-keyframes blinker {
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@-webkit-keyframes blinker {
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@keyframes blinker {
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

.heading-button {
	float: left;
	width: 20%;
	height: 100%;
}

.heading-place-name {
	float: left;
	width: 50%;
	height: 100%;
	padding: 16px 0 0 0;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.heading-badges {
	float: right;
	width: 30%;
	height: 100%;
	white-space: nowrap;
    text-align: right;
    padding: 0 15px 0 0;

}

.panel-scroll {
    max-height: 250px;
    max-height: 80vh;
	overflow: hidden;
	overflow-y: auto;
  }

@media screen and (max-width: 767px){
	.col-places {
		position: absolute;
		bottom: 0;
		margin: 0;
	}

	.sm-list-title {
		display: none;
	}

	.panel-heading {
		display: block;
	}
}

@media screen and (min-width: 768px){
	.col-places {
		position: static;
		margin: 10% 0 0 0;
		margin: 10vh 0 0 0;
	}

	.sm-list-title {
		display: block;
	}

	.panel-heading {
		display: none;
	}
}

